--- a/camp/src/main/webapp/resources/css/boardList-style2.css
+++ b/camp/src/main/webapp/resources/css/boardList-style2.css
@@ -256,13 +256,10 @@
 #boardSearch{
     width: 500px;
     height: 30px;
-
     display: flex;
     justify-content: space-between;
-
     margin: 30px auto;
 }
-
 
 /* 검색 영역 공통 스타일 */
 #boardSearch *{
@@ -270,26 +267,35 @@
     padding : 0;
     margin : 0;
 }
-
 #boardSearch select{
     width: 100px;
+    height: 35px;
+    border-radius: 7px;
+    text-align: center;
 }
 
 #boardSearch input{
+    height: 35px;
     flex-grow: 1;
     margin: 0 10px;
     padding-left: 10px;
+    border-radius: 7px;
+}
+#boardSearch input:focus{
+    outline: none;
+    border: 3px solid rgba(235, 145, 29) !important;
 }
 
+
 #boardSearch button{
-    width: 100px;
-
-    background-color: #455ba8;
-    color: white;
+    width: 30px !important;
+    color: rgb(12, 12, 12);
     border : 0;
-
-    font-weight: bold;
     cursor: pointer;
+    font-size: 25px;
+}
+#boardSearch button:hover {
+    color: #f09226;
 }
 
 
