boardwriteform 관리자삭제버튼수정해야함

--- a/camp/src/main/webapp/resources/css/boardList-style3.css
+++ b/camp/src/main/webapp/resources/css/boardList-style3.css
@@ -245,6 +245,7 @@
     border : 0;
     cursor: pointer;
     font-size: 25px;
+    background-color: transparent;
 }
 #boardSearch button:hover {
     color: #f09226;
