--- a/camp/src/main/webapp/resources/css/boardList-style2.css
+++ b/camp/src/main/webapp/resources/css/boardList-style2.css
@@ -351,6 +351,7 @@ padding-left: 50px;
     border : 0;
     cursor: pointer;
     font-size: 25px;
+    background-color: transparent;
 }
 #boardSearch button:hover {
     color: #f09226;
