--- a/camp/src/main/webapp/resources/css/main.css
+++ b/camp/src/main/webapp/resources/css/main.css
@@ -29,7 +29,7 @@ transition: background-color 5000s;
     
     box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
 }
-  
+
 
 .header-container {
   width: 95%;
@@ -418,6 +418,7 @@ main {
   padding: 7px 0;
   display: flex;
   align-items: center;
+  width: 200px;
 }
 
 #footer .footer-top .footer-links ul li:first-child {
