관리자 CSS수정

--- a/camp/src/main/webapp/resources/css/main.css
+++ b/camp/src/main/webapp/resources/css/main.css
@@ -398,7 +398,7 @@ main {
 }
 
 .footer-top > .container > .row {
-  margin-left: 70px !important;
+/*   margin-left: 70px !important; */
 }
 
 #footer .footer-top .footer-links ul {
