--- a/camp/src/main/webapp/resources/css/boardList-style2.css
+++ b/camp/src/main/webapp/resources/css/boardList-style2.css
@@ -168,8 +168,11 @@
     margin-left: 15px;
 }
 #memberInfo{
-    margin-left: 58%;
     color: #3a3a3a;
+}
+.memberInfoBox{
+    display: flex;
+    justify-content: end;
 }
 
 /* 게시글 목록 영역 */
@@ -185,8 +188,8 @@
     border: 1px solid #00000057;
     margin: 50px;
     border-radius: 15px;
-    margin-left: 100px;
-    margin-right: 100px;
+    margin-left: 150px;
+    margin-right: 150px;
     background-color: #f4f4f4;
     box-shadow: 5px 5px 10px 5px rgb(43 128 42 / 33%);
 }
@@ -351,6 +354,7 @@ padding-left: 50px;
     border : 0;
     cursor: pointer;
     font-size: 25px;
+    background-color: transparent;
 }
 #boardSearch button:hover {
     color: #f09226;
