--- a/camp/src/main/webapp/resources/css/main.css
+++ b/camp/src/main/webapp/resources/css/main.css
@@ -469,6 +469,10 @@ main {
   font-size: 18px;
   color: #212529;
 }
+#footer .account{
+  text-align: center;
+  font-size: 18px;
+}
 
 #footer > a {
   color : #eb5d1e !important;
