--- a/camp/src/main/webapp/resources/css/boardList-style1.css
+++ b/camp/src/main/webapp/resources/css/boardList-style1.css
@@ -88,7 +88,7 @@ main{
     justify-content: center;
     flex-direction: column;
     height: 1850px;
-    background-color: rgb(240, 244, 241);
+    /* background-color: rgb(240, 244, 241); */
     width: 1850px;
     padding: 30px 50px 0;
     /* padding: [padding-top] [padding-left = padding-right] [padding-bottom]; */
@@ -110,16 +110,18 @@ span{
     margin-right: 35px;
     height: 45%;
     /* width: 95%; */
-    background-color: rgb(237, 235, 235);
-    /* border : 1px solid black; */
+    background-color: #f0f1f5;
+    border : 1px solid #dedede;
+    box-shadow: 5px 5px 10px 10px #dedede;
 }
 .board2{
     margin-left: 35px;
     margin-right: 35px;
     height: 30%;
     /* width: 95%; */
-    background-color: rgb(237, 235, 235);
-    /* border : 1px solid black; */
+    background-color: #f0f1f5;
+    border: 1px solid #dedede;
+    box-shadow: 0 0 20px #dedede;
 }
 
 
@@ -130,7 +132,8 @@ span{
     /* margin-left: 30px; */
     margin-top: 30px;
     margin-bottom: 10px;
-    justify-content: space-evenly;
+    justify-content: center;
+
     /* border : 1px solid green; */
 }
 
@@ -147,34 +150,109 @@ span{
     text-align: center;
     margin-top: 50px;
     margin-bottom: 50px;
-    /* display: inline-block; */
-    /* color: #000; */
-    /* vertical-align: middle; */
     line-height: 45px;
 }
 .headline h1{
-    font-size: 30px;
+    font-size: 35px;
     margin: 0px;
 }
 .headline h2{
+    font-size: 30px;
     margin-top: 15px;
 }
 .headline2{
     text-align: center;
     width: 450px;
     margin-bottom: 5px;
-    font-size: 25px;
+    font-size: 28px;
     font-weight: 800;
+}
+
+
+/* 슬라이드박스(여행지 추천) */
+.slide-img{
+    border-radius: 70%;
+    height: 300px;
+}
+.hover-text{
+    width: 282px;
+    height: 282px;
+    position: absolute;
+    opacity: 0;
+    margin: -282px 0 0 68px;
+            /*상 우  하 좌  */
+    padding-top: 130px;
+    font-size: 25px;
+    color: white;
+    cursor: pointer;
+}
+.hover-text:hover{
+    font-weight: bold;
+    text-align: center;
+    opacity: 0.8;
+    transition: opacity 0.2s linear;
+    border-radius: 50%;
+    background-color: #434a51;
+}
+.multiple-items img{
+    opacity: 0.95;
+    border-radius: 50%;
+    width: 280px;
+    height: 280px;
+    display: block;
+    margin: auto;
+    margin-top: 10px;
+}
+.slide-text{
+    text-align: center;
+    margin: auto;
+    width: 90%;
+    height: 12%;
+    background-color:white;
+    border: 1px solid #eaeaea;
+    padding: 14px;
+    border-radius: 5%;
+    /* border : 1px solid black; */
+}
+.slide-title{
+    color: #f57f00;
+    font-weight: bold;
+    font-size: 20px;
+    margin-top: 0px;
+    padding-bottom: 15px;
+    border-bottom: 1px solid #dedede;
+}
+.slide-content{
+    width: 100%;
+    height: 100px;
+    overflow: auto;
+    ::-webkit-scrollbar{
+        display: none;
+    }
+    /* border : 1px solid red; */
+}
+.slide-btn{
+    width: 42%;
+    height: 30px;
+    margin-top: -25px;
+    justify-content: center;
+    align-items: center;
+    background: #f9ba76;
+    border-style: none;
 }
 
 
 /* 페이스북 */
 .board2-1{
-    /* border: 1px solid black; */
-    width: 550px;
-    height: 450px;
+    width: 515px;
+    height: 400px;
+    background-color: #f0f1f5;
+    padding-top: 10px;
+    padding-left: 6px;
+    border: 1px solid #dedede;
+    border-radius: 5%;
 }
-._10b4 {
+._10b4{
     overflow-y: auto;
     ::-webkit-scrollbar{
         display: none;
@@ -184,63 +262,22 @@ span{
 }
 
 
-/* 슬라이드박스(여행지 추천) */
-/* .slide_div{
-    border-radius: 70%;
-    overflow: hidden;
-	padding: 20px 0 20px 0;
-    background: #e6e9f6;
-} */
-.multiple-items img{
-    border-radius: 50%;
-    object-fit: cover;
-	max-width: 80%;
-    width: 280px;
-    height: 280px;
-    display: block;
-	margin: auto;
-}
-.slide-text{
-    text-align: center;
-    margin: auto;
-    width: 90%;
-    height: 10%;
-    /* border : 1px solid black; */
-}
-.slide-content{
-    width: 100%;
-    height: 100px;
-    overflow: auto;
-    ::-webkit-scrollbar{
-        display: none;
-    }
-    /* border : 1px solid black; */
-}
-.slide-btn{
-    width: 30%;
-    height: 30px;
-    margin-left: 160px;
-    justify-content: center;
-    align-items: center;
-}
-
-
 /* 슬라이드박스(광고) */
 .slide_div2{
     /* text-align: center; */
     /* flex-direction: row; */
-    margin-left: 70px;
-    width: 55%;
+    /* margin-left: 70px; */
+    width: 63%;
     height: 400px;
     /* border : 1px solid red; */
 }
 .multiple-items2 img{
     border-radius: 5%;
-	width: 350px;
+    width: 350px;
     height: 400px;
     /* margin-left: 40px; */
     display: block;
-	margin: auto;
+    margin: auto;
 }
 .slide-content2{
     /* border : 1px solid black; */
@@ -378,9 +415,9 @@ CSS 애니메이션 과정의 중간 절차를 제어할 수 있게 합니다.  
 .col-lg-auto, .col-xl-1, .col-xl-2, .col-xl-3, .col-xl-4, .col-xl-5, .col-xl-6, .col-xl-7, .col-xl-8, .col-xl-9, .col-xl-10, .col-xl-11, .col-xl-12, .col-xl,
 .col-xl-auto, .col-xxl-1, .col-xxl-2, .col-xxl-3, .col-xxl-4, .col-xxl-5, .col-xxl-6, .col-xxl-7, .col-xxl-8, .col-xxl-9, .col-xxl-10, .col-xxl-11, .col-xxl-12, .col-xxl,
 .col-xxl-auto {
-	position: relative;
-	width: 100%;
-	min-height: 1px;
-	padding-right: 15px;
-	padding-left: 15px;
+   position: relative;
+   width: 100%;
+   min-height: 1px;
+   padding-right: 15px;
+   padding-left: 15px;
 }
