--- a/camp/src/main/webapp/resources/css/findIdPw.css
+++ b/camp/src/main/webapp/resources/css/findIdPw.css
@@ -845,7 +845,7 @@ opacity: 0.25;
 background: #fff;
 padding: 0 0 20px 0;
 color: #212529;
-font-size: 18px;
+font-size: 16px;
 background: #fef8f5;
 position: relative;
 top: 1100px;
@@ -909,6 +909,7 @@ line-height: 1;
   padding: 7px 0;
   display: flex;
   align-items: center;
+  width: 200px;
 }
 
 #footer .footer-top .footer-links ul li:first-child {
@@ -1005,7 +1006,7 @@ background-color: #eee;
   font-size: 17px;
 }
 .footer-top > .container > .row {
-  margin-left: 70px !important;
+/*   margin-left: 70px !important; */
 }
 
 
@@ -1024,7 +1025,7 @@ width: 700px !important;
 }
 .row > * {
 flex-shrink: 1;
-width: 100%;
+width: 25%;
 max-width: 100%;
 padding-right: calc(var(--bs-gutter-x) * 0.5);
 padding-left: calc(var(--bs-gutter-x) * 0.5);
