--- a/camp/src/main/webapp/resources/css/login.css
+++ b/camp/src/main/webapp/resources/css/login.css
@@ -889,6 +889,7 @@ cursor: pointer;
   padding: 7px 0;
   display: flex;
   align-items: center;
+  width: 200px;
 }
 
 #footer .footer-top .footer-links ul li:first-child {
@@ -1010,7 +1011,7 @@ cursor: pointer;
 
 .row > * {
   flex-shrink: 1;
-  width: 100%;
+  width: 25%;
   max-width: 100%;
   padding-right: calc(var(--bs-gutter-x) * 0.5);
   padding-left: calc(var(--bs-gutter-x) * 0.5);
