--- a/camp/src/main/webapp/resources/css/signUp.css
+++ b/camp/src/main/webapp/resources/css/signUp.css
@@ -67,10 +67,10 @@ margin-bottom: -9px;
 }
 
 #header .logo img {
-padding: 0;
-margin: 0;
-max-height: 90px;
-width: 200px;
+  padding: 5px;
+  margin: 0;
+  max-height: 90px;
+  margin-left: 20px;
 }
 
 .navbar {
@@ -901,6 +901,7 @@ line-height: 1;
   padding: 7px 0;
   display: flex;
   align-items: center;
+  width: 200px;
 }
 
 #footer .footer-top .footer-links ul li:first-child {
@@ -997,7 +998,7 @@ margin-top: 0px !important;
   font-size: 17px;
 }
 .footer-top > .container > .row {
-  margin-left: 70px !important;
+/*   margin-left: 70px !important; */
 }
 
 
@@ -1015,7 +1016,7 @@ width: 700px !important;
 }
 .row > * {
 flex-shrink: 1;
-width: 100%;
+width: 25%;
 max-width: 100%;
 padding-right: calc(var(--bs-gutter-x) * 0.5);
 padding-left: calc(var(--bs-gutter-x) * 0.5);
