--- a/camp/src/main/webapp/resources/css/boardDetail-style.css
+++ b/camp/src/main/webapp/resources/css/boardDetail-style.css
@@ -104,13 +104,14 @@
 
 /* 내용 */
 .board-content{
-    padding: 30px 0;
-    margin: 30px 0;
-    border-top : 3px solid #ccc;
+    padding: 10px 20px;
+    margin: 10px 10px;
+    /* border-top : 3px solid #ccc; */
     border-bottom : 3px solid #ccc;
     overflow: auto;
     font-size: 18px;
     min-height: 500px;
+    /* border: 1px solid red; */
 }
 
 .board-content > textarea{
@@ -123,6 +124,8 @@
 /* 버튼 영역 */
 .board-btn-area{
     text-align: right;
+    margin-top: 20px;
+    margin-right: 15px;
 }
 
 /* 버튼 */
