--- a/camp/src/main/webapp/resources/css/boardList-style1.css
+++ b/camp/src/main/webapp/resources/css/boardList-style1.css
@@ -2,16 +2,12 @@
     border : 1px solid black;
 } */
 
-/* * {
-    box-sizing: border-box;
-} */
-
 
 /* 글씨체 */
 @import url('https://fonts.googleapis.com/css2?family=Gaegu:wght@700&family=Gowun+Batang&display=swap');
-
 /* font-family: 'Gaegu', cursive;
 font-family: 'Gowun Batang', serif; */
+
 
 /* a태그 공통 설정 */
 .board a{
@@ -47,10 +43,9 @@ main{
     position: sticky;
     top: 120px;
     width: 200px;
-    
-    /* border-right : 2px solid gray; */
     text-align: center;
     height: 300px;
+    /* border-right : 2px solid gray; */
 }
 .left-side > h3 {
     background-color: #343a40;
@@ -74,12 +69,9 @@ main{
     text-decoration: none;
     color : black;
     height: 100%;
-
     display: flex;
-
     justify-content: center;
     align-items: center;
-
     /* border-bottom : 2px solid #ddd; */
 }
 .list-group  li:hover{
@@ -94,7 +86,6 @@ main{
     justify-content: center;
     flex-direction: column;
     height: 1850px;
- /*    background-color: rgb(240, 244, 241); */
     width: 1850px;
     padding: 30px 50px 0;
     /* padding: [padding-top] [padding-left = padding-right] [padding-bottom]; */
@@ -114,18 +105,15 @@ span{
 .board1{
     margin-left: 35px;
     margin-right: 35px;
-    height: 45%;
-    /* width: 95%; */
+    height: 42%;
     background-color: #f0f1f5;
     border : 1px solid #dedede;
     box-shadow: 0 0 20px #dedede;
-    /* box-shadow: 5px 5px 10px 10px #dedede; */
 }
 .board2{
     margin-left: 35px;
     margin-right: 35px;
     height: 35%;
-    /* width: 95%; */
     background-color: #f0f1f5;
     border: 1px solid #dedede;
     box-shadow: 0 0 20px #dedede;
@@ -143,55 +131,88 @@ span{
 .board-list{
     display: flex;
     width: 100%;
-    /* margin-left: 30px; */
     margin-top: 30px;
     margin-bottom: 10px;
     justify-content: center;
-
     /* border : 1px solid green; */
 }
 
 
 /* div headline 관련 */
-/* .headline1 .headline2{
-    text-align: center;
-    margin-top: 50px;
-    margin-bottom: 50px;
-    line-height: 45px;   
-} */
 .headline1 h1{
-    text-align: center;
     font-size: 50px;
     font-weight: 700;
     font-family: 'Gaegu', cursive;
-    /* font-family: 'Gowun Batang', serif; */
     margin-top: 20px;
     margin-bottom: 5px;
 }
-.headline1 h2{
-    text-align: center;
+.headline1-1{
+    display: flex;
+    justify-content: center;
+    margin-bottom: 0px;
+}
+.headline1-1 h2{
     font-size: 40px;
     font-weight: 300;
     font-family: 'Gaegu', cursive;
-    /* font-family: 'Gowun Batang', serif; */
-    margin-top: 20px;
+    margin-top: 10px;
 }
+
+
+.headline1-2{
+    display: flex;
+    justify-content: center;
+    margin-bottom: -40px;
+}
+.headline1-2 h2{
+    font-size: 40px;
+    font-weight: 300;
+    font-family: 'Gaegu', cursive;
+    margin-top: 10px;
+}
+
+
 .headline2 h1{
     text-align: center;
     font-size: 50px;
     font-weight: 700;
     font-family: 'Gaegu', cursive;
-    /* font-family: 'Gowun Batang', serif; */
     margin-top: 20px;
     margin-bottom: 5px;
 }
-.headline2 h2{
-    text-align: center;
+.headline2-1{
+    display: flex;
+    justify-content: center;
+    margin-bottom: -40px;
+}
+.headline2-1 h2{
     font-size: 40px;
     font-weight: 300;
     font-family: 'Gaegu', cursive;
-    /* font-family: 'Gowun Batang', serif; */
-    margin-top: 20px;
+    margin-top: 10px;
+}
+
+
+.color1-1{
+    color: #02ff00;
+    text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.2);
+}
+.color1-11{
+    color: white;
+    text-shadow: 3px 3px 3px rgba(0, 0, 0, 0.3);
+}
+.color1-12{
+    color: #27a044;
+    /* text-shadow: 3px 3px 3px rgba(0, 0, 0, 0.3); */
+}
+.color1-2{
+    /* color: #f57f00; */
+    color: #02ff00;
+    text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.2);
+}
+.color2{
+    /* color: #5ba26d; */
+    color: #27a044;
 }
 
 
@@ -241,7 +262,7 @@ span{
     /* border : 1px solid black; */
 }
 .slide-title{
-    color: #f57f00;
+    color: #348b49;
     font-weight: bold;
     font-size: 20px;
     margin-top: 0px;
@@ -265,8 +286,11 @@ span{
     margin-top: -25px;
     justify-content: center;
     align-items: center;
-    background: #f9ba76;
+    background: #6fba82;
     border-style: none;
+    color: white;
+    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.3);
+    font-weight: 700;
     font-family: 'Gowun Batang', serif;
 }
 
@@ -296,7 +320,7 @@ span{
     /* text-align: center; */
     /* flex-direction: row; */
     /* margin-left: 70px; */
-    width: 63%;
+    width: 66.5%;
     height: 400px;
     /* border : 1px solid red; */
 }
