--- a/camp/src/main/webapp/resources/css/boardWriteForm-style.css
+++ b/camp/src/main/webapp/resources/css/boardWriteForm-style.css
@@ -89,7 +89,7 @@
 /* 내용 */
 .board-content{
     padding: 30px 0;
-    margin: 30px 0;
+    /* margin: 30px 0; */
     /* border-top : 3px solid #ccc; */
     border-bottom : 3px solid #ccc;
 }
@@ -105,6 +105,8 @@
 /* 버튼 영역 */
 .board-btn-area{
     text-align: right;
+    margin-top: 20px;
+    /* margin-right: 5px; */
 }
 
 /* 버튼 */
