--- a/camp/src/main/webapp/resources/css/main.css
+++ b/camp/src/main/webapp/resources/css/main.css
@@ -237,8 +237,8 @@ main {
   font-size: 50px;
   font-style: oblique;
   text-align: center;
-  text-shadow: 6px 5px 6px rgba(0, 0, 0, 0.5);
-
+  /* text-shadow: 6px 5px 6px rgba(0, 0, 0, 0.5); */
+  text-shadow: 2px 5px 6px rgba(0, 0, 0, 0.5);
 }
 .titleColor{
   color: #02ff00;
@@ -520,6 +520,7 @@ main {
 .section-title > h1 {
   margin-bottom: 30px;
   color: white;
+  text-shadow: 2px 5px 6px rgba(0,0,0,0.5);
   font-size: 50px;
   font-family: 'Gaegu', cursive;
 }
