--- a/camp/src/main/webapp/resources/css/boardList-style.css
+++ b/camp/src/main/webapp/resources/css/boardList-style.css
@@ -17,7 +17,7 @@
     width: 100%;
     /* margin: 50px auto; */
     padding: 0 50px;
-    border-left: 2px solid #ddd;
+/*     border-left: 2px solid #ddd; */
     min-height: 670px;
 }
 
@@ -207,6 +207,7 @@ thead tr:nth-child(1) {
     border : 0;
     cursor: pointer;
     font-size: 25px;
+    background-color: transparent;
 }
 #boardSearch button:hover {
     color: #f09226;
