--- a/camp/src/main/webapp/resources/css/login.css
+++ b/camp/src/main/webapp/resources/css/login.css
@@ -1,4 +1,5 @@
-@charset "UTF-8";
+@import url('https://fonts.googleapis.com/css2?family=Gaegu:wght@700&family=Gowun+Batang&display=swap');
+
 * {
   box-sizing: border-box;
 }
@@ -105,21 +106,23 @@ display: flex;
 #header .logo h1 {
 display: flex;
 align-items: center;
-font-size: 33px;
+font-size: 45px;
 margin: 0;
 font-weight: 400;
 letter-spacing: 2px;
 color: #02ff00;
+font-family: 'Gaegu', cursive;
 }
 #header .logo h4 {
 display: flex;
 align-items: center;
-font-size: 20px;
+font-size: 32px;
 margin: 0;
 font-weight: 400;
 letter-spacing: 2px;
 color: #ffffff;
 margin-bottom: -9px;
+font-family: 'Gaegu', cursive;
 }
 
 #header .logo img {
@@ -886,6 +889,7 @@ cursor: pointer;
   padding: 7px 0;
   display: flex;
   align-items: center;
+  width: 200px;
 }
 
 #footer .footer-top .footer-links ul li:first-child {
@@ -1007,7 +1011,7 @@ cursor: pointer;
 
 .row > * {
   flex-shrink: 1;
-  width: 100%;
+  width: 25%;
   max-width: 100%;
   padding-right: calc(var(--bs-gutter-x) * 0.5);
   padding-left: calc(var(--bs-gutter-x) * 0.5);
