--- a/camp/src/main/webapp/resources/css/main.css
+++ b/camp/src/main/webapp/resources/css/main.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Gaegu:wght@700&family=Gowun+Batang&display=swap');
+
 * {
     box-sizing: border-box;
 }
@@ -29,7 +31,7 @@ transition: background-color 5000s;
     
     box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
 }
-  
+
 
 .header-container {
   width: 95%;
@@ -51,21 +53,23 @@ transition: background-color 5000s;
 #header .logo h1 {
   display: flex;
   align-items: center;
-  font-size: 33px;
+  font-size: 45px;
   margin: 0;
   font-weight: 400;
   letter-spacing: 2px;
   color: #02ff00;
+  font-family: 'Gaegu', cursive;
 }
 #header .logo h4 {
   display: flex;
   align-items: center;
-  font-size: 20px;
+  font-size: 32px;
   margin: 0;
   font-weight: 400;
   letter-spacing: 2px;
   color: #ffffff;
   margin-bottom: -9px;
+  font-family: 'Gaegu', cursive;
 }
 
 
@@ -398,7 +402,7 @@ main {
 }
 
 .footer-top > .container > .row {
-  margin-left: 70px !important;
+/*   margin-left: 70px !important; */
 }
 
 #footer .footer-top .footer-links ul {
@@ -418,6 +422,7 @@ main {
   padding: 7px 0;
   display: flex;
   align-items: center;
+  width: 200px;
 }
 
 #footer .footer-top .footer-links ul li:first-child {
@@ -469,6 +474,10 @@ main {
   font-size: 18px;
   color: #212529;
 }
+#footer .account{
+  text-align: center;
+  font-size: 18px;
+}
 
 #footer > a {
   color : #eb5d1e !important;
@@ -507,10 +516,15 @@ main {
 
 /*****************************************/
 
+
 .section-title > h1 {
   margin-bottom: 30px;
   color: white;
+  font-size: 50px;
+  font-family: 'Gaegu', cursive;
 }
+
+
 
 #divv{
     width: 100%;
