--- a/camp/src/main/webapp/resources/css/findIdPw.css
+++ b/camp/src/main/webapp/resources/css/findIdPw.css
@@ -22,6 +22,20 @@ main {
   margin: auto;
 }
 
+#member-profile1 {
+  width: 40px !important;
+  height: 40px !important;
+  border-radius: 50% !important;
+}
+.navbar li {
+  position: relative;
+  display: flex;
+  font-size: 18px;
+  color: white;
+}
+a#memberId {
+  padding: 10px 0 10px 10px;
+}
 input:-webkit-autofill,
 input:-webkit-autofill:hover,
 input:-webkit-autofill:focus,
