--- a/camp/src/main/webapp/resources/css/boardDetail-style.css
+++ b/camp/src/main/webapp/resources/css/boardDetail-style.css
@@ -12,6 +12,7 @@
 .board-title{
     margin : 0;
     padding: 20px 0;
+    padding-left: 20px;
     font-size: 2em;
     border-bottom : 3px solid #ccc;
 }
@@ -26,6 +27,7 @@
 /* 게시글 헤더 */
 .board-header{
     padding: 20px 0;
+    padding-left: 20px;
     border-bottom : 3px solid #ccc;
     display: flex;
     justify-content: space-between;
@@ -104,9 +106,7 @@
 
 /* 내용 */
 .board-content{
-    padding: 10px 20px;
-    margin: 10px 10px;
-    /* border-top : 3px solid #ccc; */
+    padding: 20px 20px;
     border-bottom : 3px solid #ccc;
     overflow: auto;
     font-size: 18px;
