--- a/camp/src/main/webapp/resources/css/boardWriteForm-style.css
+++ b/camp/src/main/webapp/resources/css/boardWriteForm-style.css
@@ -91,7 +91,7 @@
     padding: 30px 0;
     /* margin: 30px 0; */
     /* border-top : 3px solid #ccc; */
-    border-bottom : 3px solid #ccc;
+    /* border-bottom : 3px solid #ccc; */
 }
 
 .board-content > textarea{
@@ -105,7 +105,9 @@
 /* 버튼 영역 */
 .board-btn-area{
     text-align: right;
-    margin-top: 20px;
+    margin: 0px 60px;
+    border-top: 3px solid #ccc;
+    padding-top: 20px;
     /* margin-right: 5px; */
 }
 
@@ -133,7 +135,7 @@
     margin-right: 10px;
 }
 .board-btn-area button:nth-child(2) {
-    margin-right: 90px;
+    margin-right: 22px;
 }
 
 
