--- a/camp/src/main/webapp/resources/css/main.css
+++ b/camp/src/main/webapp/resources/css/main.css
@@ -352,6 +352,10 @@ main {
     line-height: 25px;
 }
 
+.hiddenTH{
+  visibility: hidden;
+}
+
 
 /*--------------------------------------------------------------
 # Footer
