--- a/camp/src/main/webapp/resources/css/boardList-style+버전.css
+++ b/camp/src/main/webapp/resources/css/boardList-style+버전.css
@@ -2,6 +2,39 @@
     border : 1px solid black;
 } */
 
+#myPageHeadFlexImg{
+    background-image: url(../images/12.png);
+}
+
+.myPageHead{
+    min-width: 1200px;
+    width: 500px;
+    height: 120px;
+    margin-top: 50px;
+    margin-left: 50px;
+  }
+  .myPageHeadFlex{
+    min-width: 1200px;
+    color: white;
+    display: flex;
+/*     background-image: url(../images/10.png); */
+    background-size: 100% 100%;
+    margin-top: 30px;
+    width: 100%;
+    height: 200px;
+  }
+  .myPage-title{
+    margin : 20px 0 20px 0;
+    font-size: 40px;
+}
+
+.myPage-explanation{
+    display: block;
+    margin-bottom: 20px;   
+    font-size: 14px;
+    letter-spacing: -1px;
+}
+
 /* 왼쪽 사이드 메뉴 */
 .myPage-content{
     width: 1850px;
