--- a/camp/src/main/webapp/resources/css/login.css
+++ b/camp/src/main/webapp/resources/css/login.css
@@ -354,7 +354,11 @@ cursor: pointer;
     font-weight: bolder !important;
     font-size: 60px;
   }
-    
+  img#member-profile1 {
+    width: 40px !important;
+    height: 40px !important;
+    border-radius: 50% !important;
+}
 
 
   .g-5,
